--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    
+
     <!-- div to help control the background picture -->
     <div id="theme">
 
@@ -28,10 +28,14 @@
                     <h1>Totally Trivial Trivia!</h1>
                     <div id="howTo">
                         <p>
-                            Here go the instructions on how to play the game and what to expect once you hit done.
+                            Welcome to my Trivia Game.  What can you expect?
+                            <ol class="instructions">
+                                    <li>You have 15 seconds to answer all the questions</li>
+                                    <li>If you are done before the timer is up, click "Done" to get your results</li>
+                                    <li>If you don't finish before the timer goes off, the game will end and show you the results</li>
+                            <ol>
                             <br>
                             Click on start when ready to play
-
                         </p>
                     </div>
 
